end of section 5

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,5 +1,12 @@
-<h1>Dating {{title}} </h1>
+<app-nav></app-nav>
 
-<ul>
-    <li *ngFor="let i of users">{{i.id}}-{{i.userName}}</li>
-</ul>
+<div class="contrainer" style="margin-top: 100px">
+    <app-home></app-home>
+    <!-- <ul>
+        <li *ngFor="let i of users">
+            {{i.id}}-{{i.userName}}
+        </li>
+    </ul> -->
+
+</div>
+
