end of section 6

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-nav></app-nav>
 
 <div class="contrainer" style="margin-top: 100px">
-    <app-home></app-home>
+    <router-outlet></router-outlet>
+    <!-- <app-home></app-home> -->
     <!-- <ul>
         <li *ngFor="let i of users">
             {{i.id}}-{{i.userName}}
