--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -1,25 +1,28 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary" >
     <div class="container">
-      <a class="navbar-brand" href="#">Dating App</a>
+      <a class="navbar-brand" routerLink="/">Dating App</a>
      
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ |async">
-          <li class="nav-item">
-            <a class="nav-link " href="#">Matches</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">List</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " aria-disabled="true">Messages</a>
-          </li>
-          <!-- <li class="nav-item" (click)="logout()">
-            <a class="nav-link ">Logout</a>
-          </li> -->
+        <ul class="navbar-nav me-auto mb-2 mb-md-0" >
+          <ng-container *ngIf="accountService.currentUser$ |async">
+
+            <li class="nav-item">
+              <a class="nav-link " routerLink="/members" routerLinkActive="active">Matches</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/lists" routerLinkActive="active">List</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " routerLink="/messages" routerLinkActive="active">Messages</a>
+            </li>
+            <!-- <li class="nav-item" (click)="logout()">
+              <a class="nav-link ">Logout</a>
+            </li> -->
+          </ng-container>
         </ul>
 
 
-        <div class="dropdown" *ngIf="accountService.currentUser$ |async" dropdown>
-                <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>welcome user</a>
+        <div class="dropdown" *ngIf="accountService.currentUser$ |async as user" dropdown>
+                <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>welcome {{user.username | titlecase}}</a>
                 <div class="dropdown-menu" *dropdownMenu="">
                     <a class="dropdown-item">Edit profile</a>
                     <a class="dropdown-item" (click)="logout()">Logout</a>
@@ -28,7 +31,7 @@
         </div>
 
 
-        <form *ngIf="!(accountService.currentUser$ |async)" #loginform="ngForm" (ngSubmit)="login()"   autocomplete="off"  class="d-flex" >
+        <form *ngIf="!(accountService.currentUser$ |async) " #loginform="ngForm" (ngSubmit)="login()"   autocomplete="off"  class="d-flex" >
           <input  name="username" 
           [(ngModel)]="model.username"
           class="form-control me-2" 
@@ -38,7 +41,7 @@
           <input    name="password" 
           [(ngModel)]="model.password" class="form-control me-2" type="password" placeholder="password">
 
-          <button class="btn btn-outline-success" type="submit">Login</button>
+          <button class="btn btn-success" type="submit">Login</button>
         </form>
       
     </div>
