end of section 7

--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -18,6 +18,9 @@
               <a class="nav-link ">Logout</a>
             </li> -->
           </ng-container>
+          <li class="nav-item">
+            <a class="nav-link " routerLink="/errors" routerLinkActive="active">errors</a>
+          </li>
         </ul>
 
 
