end of section 9

--- a/Client/src/app/members/member-detail/member-detail.component.html
+++ b/Client/src/app/members/member-detail/member-detail.component.html
@@ -1,1 +1,58 @@
-<p>member-detail works!</p>
+<div class="row" *ngIf="member">
+    <div class="col-4">
+        <div class="card">
+
+            <img src="{{member.photoUrl || './assets/user.png'}}" class="card-img-top img-thumbnail"
+            alt="{{member.knownAs}}">
+            <div class="card-body">
+                <strong>Name:</strong>
+                <p>{{member.userName}}</p>
+            </div>
+            <div class="card-body">
+                <strong>Location:</strong>
+                <p>{{member.city}}</p>
+            </div>
+            <div class="card-body">
+                <strong>Age:</strong>
+                <p>{{member.age}}</p>
+            </div>
+            <div class="card-body">
+                <strong>lastActive:</strong>
+                <p>{{member.lastActive}}</p>
+            </div>
+            <div class="card-body">
+                <strong>started:</strong>
+                <p>{{member.created}}</p>
+            </div>
+            <div class="card-footer">
+                    <div class="btn-group d-flex">
+                        <button class="btn btn-primary">like</button>
+                        <button class="btn btn-success">Message</button>
+                    </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-8">
+        <tabset class="member-tabset">
+            <tab heading="About{{member.knownAs}}">
+                <h4>
+                    Description
+                </h4>
+                <p>{{member.introduction}}</p>
+                <h4>Looking for</h4>
+                <p>{{member.lookingFor}}</p>
+            </tab>
+            <tab heading="Interests">
+                <h4>Interests</h4><p>{{member.interests}}</p>
+            </tab>
+            <tab heading="Photos" #photoTab="tab">
+                <!-- <h4>Interests</h4><p>photos will go there</p> -->
+                <gallery *ngIf="photoTab.active" [items]="images" class="gallery"></gallery>
+            </tab>
+            <tab heading="Messages">
+                <h4>Interests</h4><p>Messages will go here</p>
+            </tab>
+
+        </tabset>
+    </div>
+</div>
