--- a/Client/src/app/members/member-list/member-list.component.html
+++ b/Client/src/app/members/member-list/member-list.component.html
@@ -1,1 +1,7 @@
-<p>member-list works!</p>
+
+<div class="row">
+    <div class="col-2" *ngFor="let member of members">
+        <app-members-card [member]="member"></app-members-card>
+         
+    </div>
+</div>
