end of section 10

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,13 +1,11 @@
+<ngx-spinner tyep="line-scale-party">
+    <h3>loading.....</h3>
+</ngx-spinner>
 <app-nav></app-nav>
 
 <div class="contrainer" style="margin-top: 100px">
     <router-outlet></router-outlet>
-    <!-- <app-home></app-home> -->
-    <!-- <ul>
-        <li *ngFor="let i of users">
-            {{i.id}}-{{i.userName}}
-        </li>
-    </ul> -->
+    
 
 </div>
 
