--- a/Client/src/app/members/member-list/member-list.component.html
+++ b/Client/src/app/members/member-list/member-list.component.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-    <div class="col-2" *ngFor="let member of members">
+    <div class="col-2" *ngFor="let member of members$ | async">
         <app-members-card [member]="member"></app-members-card>
          
     </div>
