--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -25,7 +25,8 @@
 
 
         <div class="dropdown" *ngIf="accountService.currentUser$ |async as user" dropdown>
-                <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>welcome {{user.username | titlecase}}</a>
+          <img src="{{user.photoUrl || './assets/user.png'}}" alt="">
+                <a class="dropdown-toggle text-light text-decoration-none ms-3" dropdownToggle>welcome {{user.username | titlecase}}</a>
                 <div class="dropdown-menu" *dropdownMenu="">
                     <a class="dropdown-item" routerLink="/member/edit">Edit profile</a>
                     <a class="dropdown-item" (click)="logout()">Logout</a>
