end of section 13

--- a/Client/src/app/members/members-card/members-card.component.html
+++ b/Client/src/app/members/members-card/members-card.component.html
@@ -30,7 +30,8 @@
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1">
             <i class="fa fa-user me-2">
-                    {{member.knownAs}}
+                    {{member.knownAs}}-{{member.age}}<br>
+                 
             </i>
         </h6>
         <p class="card-text text-nuted text-center">
