--- a/Client/src/app/members/member-detail/member-detail.component.html
+++ b/Client/src/app/members/member-detail/member-detail.component.html
@@ -18,11 +18,11 @@
             </div>
             <div class="card-body">
                 <strong>lastActive:</strong>
-                <p>{{member.lastActive}}</p>
+                <p>{{member.lastActive+'Z'| timeago}}</p>
             </div>
             <div class="card-body">
                 <strong>started:</strong>
-                <p>{{member.created}}</p>
+                <p>{{member.created | date:'dd MMM YYYY'}}</p>
             </div>
             <div class="card-footer">
                     <div class="btn-group d-flex">
