--- a/Client/src/app/members/member-edit/member-edit.component.html
+++ b/Client/src/app/members/member-edit/member-edit.component.html
@@ -27,11 +27,11 @@
             </div>
             <div class="card-body">
                 <strong>lastActive:</strong>
-                <p>{{member.lastActive}}</p>
+                <p>{{member.lastActive + 'Z' | timeago}}</p>
             </div>
             <div class="card-body">
                 <strong>started:</strong>
-                <p>{{member.created}}</p>
+                <p>{{member.created | date:'dd MMM YYYY'}}</p>
             </div>
             <div class="card-footer">
                 <button type="submit" [disabled]="!editForm.dirty"
