end of section 14

--- a/Client/src/app/members/member-list/member-list.component.html
+++ b/Client/src/app/members/member-list/member-list.component.html
@@ -80,7 +80,7 @@
     [itemsPerPage]="pagination.itemsPerPage"
     [maxSize]="10"
     [(ngModel)]="pagination.currentPage"
-    (pageChanged)="pagination"
+    (pageChanged)="pageChanged($event)"
     previousText="&lsaquo;" 
     nextText="&rsaquo;" 
     firstText="&laquo;" 
