--- a/Client/src/app/lists/lists.component.html
+++ b/Client/src/app/lists/lists.component.html
@@ -1,1 +1,43 @@
-<p>lists works!</p>
+<div class="text-center mt-3">
+    <h2>{{predicate==='liked'?'Members I Like':'Members who Like me'}}</h2>
+</div>
+
+<div class="container mt-3">
+    <div class="d-flex">
+        <div class="btn-group" name="predicate">
+                <button class="btn btn-primary" 
+                btnRadio="liked" 
+                [(ngModel)]="predicate" 
+                (click)="loadLikes()">
+                    Member I Like
+                </button>
+                <button class="btn btn-primary" 
+                btnRadio="likedBy" 
+                [(ngModel)]="predicate" 
+                (click)="loadLikes()">
+                    Member who Like Me
+                </button>
+        </div>
+    </div>
+    <div class="row mt-3">
+        <div class="col-2" *ngFor="let member of members">
+            <app-members-card [member]="member"></app-members-card>
+        </div>
+    </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination 
+    [boundaryLinks]="true"
+    [totalItems]="pagination.totalItems"
+    [itemsPerPage]="pagination.itemsPerPage"
+    [maxSize]="10"
+    [(ngModel)]="pagination.currentPage"
+    (pageChanged)="pageChanged($event)"
+    previousText="&lsaquo;" 
+    nextText="&rsaquo;" 
+    firstText="&laquo;" 
+    lastText="&raquo;">
+ 
+</pagination>
+</div>
