--- a/Client/src/app/members/member-detail/member-detail.component.html
+++ b/Client/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="member">
+<div class="row" >
     <div class="col-4">
         <div class="card">
 
@@ -27,14 +27,14 @@
             <div class="card-footer">
                     <div class="btn-group d-flex">
                         <button class="btn btn-primary">like</button>
-                        <button class="btn btn-success">Message</button>
+                        <button (click)="selectTab('Messages')" class="btn btn-success">Message</button>
                     </div>
             </div>
         </div>
     </div>
     <div class="col-8">
-        <tabset class="member-tabset">
-            <tab heading="About{{member.knownAs}}">
+        <tabset class="member-tabset" #memberTabs>
+            <tab heading="About{{member.knownAs}}" (selectTab)="onTabActivated($event)">
                 <h4>
                     Description
                 </h4>
@@ -42,16 +42,18 @@
                 <h4>Looking for</h4>
                 <p>{{member.lookingFor}}</p>
             </tab>
-            <tab heading="Interests">
+            <tab heading="Interests" (selectTab)="onTabActivated($event)">
                 <h4>Interests</h4><p>{{member.interests}}</p>
             </tab>
        
-             <tab heading="Photos" #photoTab="tab">
+             <tab heading="Photos" #photoTab="tab"  (selectTab)="onTabActivated($event)">
                 <!-- <h4>Interests</h4><p>photos will go there</p> -->
                 <gallery *ngIf="photoTab.active" [items]="images" class="gallery"></gallery>
             </tab>
-            <tab heading="Messages">
-                <h4>Interests</h4><p>Messages will go here</p>
+            <tab heading="Messages" (selectTab)="onTabActivated($event)">
+                <app-member-messages [username]="member.userName" [messages]="messages"></app-member-messages>
+                <!-- <app-member-messages [username]="member.username></app-member-messages> -->
+                <!-- <h4>Interests</h4><p>Messages will go here</p> -->
             </tab>
 
         </tabset>
