--- a/Client/src/app/members/member-edit/member-edit.component.html
+++ b/Client/src/app/members/member-edit/member-edit.component.html
@@ -27,7 +27,7 @@
             </div>
             <div class="card-body">
                 <strong>lastActive:</strong>
-                <p>{{member.lastActive + 'Z' | timeago}}</p>
+                <p>{{member.lastActive  | timeago}}</p>
             </div>
             <div class="card-body">
                 <strong>started:</strong>
