--- a/Client/src/app/members/members-card/members-card.component.html
+++ b/Client/src/app/members/members-card/members-card.component.html
@@ -32,10 +32,13 @@
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1">
-            <i class="fa fa-user me-2">
-                    {{member.knownAs}}-{{member.age}}<br>
+            <span [class.is-online]="(presenceService.onlineUsers$ |async)?.includes(member.userName)">
+                <i class="fa fa-user me-2"></i>
+            </span>
+            <!-- <i class="fa fa-user me-2"> -->
+                    {{member.knownAs}},{{member.age}}<br>
                  
-            </i>
+            <!-- </i> -->
         </h6>
         <p class="card-text text-nuted text-center">
             {{member.city}}
