end of section 18

--- a/Client/src/app/members/member-detail/member-detail.component.html
+++ b/Client/src/app/members/member-detail/member-detail.component.html
@@ -40,7 +40,7 @@
     </div>
     <div class="col-8">
         <tabset class="member-tabset" #memberTabs>
-            <tab heading="About{{member.knownAs}}" (selectTab)="onTabActivated($event)">
+            <tab heading="About-{{member.knownAs}}" (selectTab)="onTabActivated($event)">
                 <h4>
                     Description
                 </h4>
