admin photo approvral working and chat box-updating

--- a/Client/src/app/errors/server-error/server-error.component.html
+++ b/Client/src/app/errors/server-error/server-error.component.html
@@ -1,6 +1,6 @@
 <h4>Internal error server error -please refresh this page.....!</h4>
 <ng-container *ngIf="error">
-    <h5 class="text-danger">Error:{{error.nessage}}</h5>
+    <h5 class="text-danger">Error:{{error.message}}</h5>
     <p class="font-weight-bold">Note:if your seeing this means angualar is probably not to blame</p>
     <p>what to do next?</p>
     <ol>
