--- a/Client/src/app/modals/roles-modal/roles-modal.component.html
+++ b/Client/src/app/modals/roles-modal/roles-modal.component.html
@@ -12,7 +12,7 @@
           [checked]="selectedRoles.includes(role)"
           value="role"
           (change)="updateChecked(role)"
-          [disabled]="role === 'Admin' && username === 'admin'"
+          [disabled]="role === 'Admin' && username === 'Admin'"
         >
         <label>{{role}}</label>
       </div>
