--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -14,7 +14,7 @@
             <li class="nav-item">
               <a class="nav-link " routerLink="/messages" routerLinkActive="active">Messages</a>
             </li>
-            <li *appHasRole="['Admin' ,'Moderator']" class="nav-item">
+            <li  class="nav-item"  class="nav-item" *appHasRole="['Admin','Moderator']">
               <a class="nav-link " routerLink="/admin" routerLinkActive="active">Admin</a>
             </li>
             <!-- <li class="nav-item" (click)="logout()">
